# EatingCircles

./: .gitignore
data/: res.xml
proj.cmake/: CMakeLists.txt  make.sh  run.sh
proj.emscripten/: CMakeLists.txt  build.sh  data.js
src/: Controller.cpp  Controller.h  circle.cpp  circle.h  controller.cpp  controller.h  entry_point.cpp  entry_point_old.cpp  example.cpp  example.h  game.cpp  game.h  globals.h  main_circle.cpp  main_circle.h  star.cpp  star.h
src/Controls/: menu.cpp  menu.h  settings.cpp
src/Game/Model/: AI.h  Bot.cpp  Bot.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  PlayerObject.cpp  PlayerObject.h  Unit.cpp  Unit.h
src/Game/Model/UnitController/: AI.cpp  AI.h  UnitController.cpp  UnitController.h
src/Game/Presenter/: GamePresenter.cpp  GamePresenter.h
src/Game/View/: GameView.cpp  GameView.h
src/Game/View/ExtraObjects/: star.cpp
src/Game/View/Gui/: Circle.cpp  Circle.h  GuiController.cpp  GuiController.h  GuiObject.cpp  GuiObject.h  Packman.h
src/Scenes/: MenuSceneBase.h
src/Scenes/GameScene/: GamePauseDialog.cpp  GamePauseDialog.h  GameScene.cpp  GameScene.h  GameWinDialog.cpp  GameWinDialog.h
src/Scenes/MainMenuScene/: ConfirmExitDialog.cpp  ConfirmExitDialog.h  ConfirmNewGameDialog.cpp  ConfirmNewGameDialog.h  MainMenuScene.cpp  MainMenuScene.h
src/controls/: DTO.h  highscores.cpp  highscores.h  menu.cpp  menu.h
src/game/: AI.cpp  Bot.cpp  Bot.h  Game.cpp  Game.h  GameObject.cpp  PlayerObject.h  circle.cpp  circle.h  game.cpp  game.h  star.cpp  star.h
src/game/Model/: GameObject.h
src/game/View/extraObjects/: star.cpp
src/game/View/gui/: GuiObject.h
src/game/extraObjects/: star.h
src/game/gui/: Circle.cpp  Circle.h  GuiController.cpp  GuiController.h  GuiObject.cpp  GuiObject.h  Packman.cpp  Packman.h
src/scenes/: ConfirmDialog.cpp  ConfirmDialog.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MenuSceneBase.cpp  MenuSceneBase.h
src/scenes/GameScene/: GamePauseDialog.cpp  GamePauseDialog.h  GameScene.cpp  GameScene.h
src/scenes/MainMenuScene/: ConfirmExitDialog.cpp  ConfirmNewGameDialog.cpp  ConfirmNewGameDialog.h  MainMenuScene.h
